--- a/css/styles.css
+++ b/css/styles.css
@@ -64,6 +64,7 @@ body {
   background: #FA91A7;
   width: 100%;
   height: 60vh;
+  min-height: 400px;
   background-image: url("http://monsterbranding.com.mx/images/MainImage.jpg");
   background-size: cover;
   background-position: center;
