--- a/css/styles.scss
+++ b/css/styles.scss
@@ -68,6 +68,7 @@ body {
     background: $rosado;
     width: 100%;
     height: 60vh;
+    min-height: 430px;
     background-image: url('http://monsterbranding.com.mx/images/MainImage.jpg');
     background-size: cover;
     background-position: center;
